package src.interfaces;

public interface Descriptable {
    public String describe();
}
